# home-measurements

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
scripts/: measurements.sql
src/: app.py
src/api/: api.py  api_handler.py
src/dashboard/: dashboard.py
src/db/: db_connector.py
src/domain/: measurement.py
src/raspberrypi/: aqi.py  temp-pg.py  temp.py
