[tool.poetry]
name = "home-measurements"
version = "0.1.0"
description = ""
authors = ["Raúl Reguillo Carmona <raul.reguillo@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
mysql-connector-python = "^8.0.26"
pydantic = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
