[tool.poetry]
name = "home-measurements"
version = "0.1.0"
description = ""
authors = ["Raúl Reguillo Carmona <raul.reguillo@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
mysql-connector-python = "^8.0.26"
pydantic = "^1.9.0"
#streamlit = "^1.25.0"
plotly = "^5.16.1"
pandas = "^2.0.3"
psycopg = {extras = ["binary"], version = "^3.1.12"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
